# iree

./: CMakeLists.txt
.github/workflows/: benchmark_trigger.yml  build_all.yml  build_and_test_android.yml  build_benchmark_tools.yml  build_e2e_test_artifacts.yml  build_package.yml  ci.yml  lint.yml  pkgci.yml  pkgci_regression_test_amdgpu_rocm.yml  pkgci_regression_test_amdgpu_vulkan.yml  pkgci_regression_test_cpu.yml  publish_website.yml  run_iree_dispatch_profiler.yml  validate_and_publish_release.yml
benchmarks/TF/: linux-x86_64.cmake
benchmarks/TFLite/: CMakeLists.txt  android-arm64-v8a.cmake  linux-riscv.cmake  linux-x86_64.cmake
build_tools/bazel/: iree_check_test.bzl  iree_e2e_generated_test.bzl
build_tools/bazel_to_cmake/: bazel_to_cmake_converter.py
build_tools/benchmarks/: generate_benchmark_comment.py  run_benchmarks.sh
build_tools/benchmarks/comparisons/: setup_desktop.sh  setup_mobile.sh
build_tools/cmake/: build_runtime.sh  iree_check_test.cmake  iree_e2e_generated_test.cmake  iree_llvm.cmake  test_riscv.sh
build_tools/docker/: prod_digests.txt
build_tools/github_actions/: build_dist.py  configure_ci.py
build_tools/pkgci/external_test_suite/: onnx_gpu_rocm_rdna3.json  pytorch_models_gpu_rocm_gfx90a.json  pytorch_models_gpu_rocm_gfx90a_additional_flags.json  sdxl_prompt_encoder_gpu_rocm_gfx90a.json  (+2 more)
experimental/hip/: graph_command_buffer.c
experimental/rocm/: direct_command_buffer.c
llvm-external-projects/iree-dialects/: BUILD
samples/transform_dialect/: example_module.mlir
tests/e2e/convolution/: BUILD.bazel  CMakeLists.txt
tools/: CMakeLists.txt
(+401 files in other folders)
